# zombo-bot

./: .gitignore  Dockerfile  config.yml  docker-compose.yml  pyproject.toml
.github/workflows/: lint-format.yml  lint-test.yml
bot/: __main__.py  bot.py  constants.py  log.py
bot/exts/misc/: echo.py
