[tool.poetry]
name = "zombo-bot"
version = "0.1.0"
description = "Manages Project Zomboid RP server for me. :D"
authors = ["Luna <ojackson287@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
nextcord = "^2.4.0"
httpx = "^0.23.3"
pyyaml = "^6.0"
black = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
